--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,11 @@ code {
   display: flex;
   justify-content: center;
 }
+
+.spinner {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
