--- a/src/index.css
+++ b/src/index.css
@@ -49,20 +49,6 @@ hr {
   box-shadow: none;
 }
 
-.theme-button {
-  background-color: #0f79af;
-  color: #f2f4f6
-}
-
-.theme-button:hover {
-  background-color: #1399de;
-  color: #fff;
-}
-
-.theme-button:focus {
-  box-shadow: none;
-}
-
 /* -------------------- home page -------------------- */
 
 /* .home-page-body {
@@ -204,6 +190,31 @@ hr {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+/* -------------------- ThemeButton component -------------------- */
+
+.theme-button {
+  background-color: #0f79af;
+  color: #f2f4f6;
+  min-width: 100px;
+  border: none;
+  border-radius: 4px;
+  height: 40px;
+  padding: 0 10px;
+}
+
+.theme-button:hover {
+  background-color: #1399de;
+  color: #fff;
+}
+
+.theme-button:focus {
+  box-shadow: none;
+}
+
+.theme-button-wrapper {
+  margin-right: 7px;
 }
 
 /* -------------------- overriding bootstrap -------------------- */
